2005 05 18
Updated skype (split into skypeout and skypetoskype), counterstrike and
flash.  gnutella should now match gnutella 2.  Added zip, rar and exe. 
Fixed typo: rstp --> rtsp.

2005 04 29
Reorganization.  No functional changes.

2005 04 26
Added soribada, ares.

2005 03 13
Added poco, qq, kugoo, 100bao (all Chinese things I've never heard of...).

2005 02 06
Added sip.  Tweaked "pattern quality" on a number of patterns.

2005 01 29
Improved ssh, it now matches both v1 and v2.

Improved and tested fasttrack.  It was overmatching in some cases, now
it isn't.

Moved audiogalaxy to extra/ as, from what I can tell, no one uses it (the 
program) anymore.

2005 01 20
- gnutella now matches UDP Gnutella packets as well as TCP.  
- Removed bearshare and winmx (just use gnutella).  
- Improved jabber.
- Trivial change to x11.
- Fixed httpaudio, httpvideo, httpcachehit and httpcachemiss, which were
all missing a [\x09-\x0d ].
- Added ssdp.
- Improved shoutcast.  Now matches Icecast too.

2005 01 17
Fixed http-itunes and battlefield1942 (file names didn't match protocol 
names in file...).  Improved yahoo.

2005 01 05
Added tls.

2004 12 29
Added xboxlive (or maybe just halo 2?).

2004 12 21
Obfuscated e-mail addresses and added some credits.

2004 12 08
Added battlefield1942.

2004 11 28
Added ^ to h323.

2004 11 22
Changed a \x18 to a . in h323.

2004 10 29
Removed "range: bytes=" from openft.  This caused false positives.
Added a cert authority to validcertssl and changed a . to a \.

2004 10 17
Added subspace and skype (skype pattern could use work).

2004 09 13
Added http-itunes and shoutcast.

2004 08 19
Added ciscovpn.  Improved irc (it now matches BitchX connections).

2004 07 07
Added bgp.  Added Makefile and spec file.

2004 07 05
Added msn-filetransfer, zmaap, lpd.  Added a program to test for false
matches. Removed mysql because it has too many false matches.

2004 07 01 
Cleaned up http (had an extraneous line).  Added httpaudio, httpvideo,