@@ -11,18 +11,22 @@ Notes:
 
 0) Support for doing this is pretty sketchy.  Proceed at your own risk.
 
-1) A connection may very well contain more than one file transfer. These
+1) These patterns cannot use the ^ and $ anchors, because although you
+may be matching the beginning of a file, it's not the beginning of a
+connection.
+
+2) A connection may very well contain more than one file transfer. These
 will match the first file sent and continue to apply that classification
 to all subsequent files of that connection, regardless of their content.
 
-2) Since the file starts later than the application layer protocol
+3) Since the file starts later than the application layer protocol
 information, you may need to increase the number of packets and bytes
 examined.  Use /proc/net/layer7_numpackets to increase the number of
 packets examined. i.e. "echo 12 > /proc/net/layer7_numpackets".
 To increase the number of bytes examined, you'll need to recompile
 your kernel.  See the documentation at http://l7-filter.sf.net
 
-3) If you want a filter for both a file type and the application layer
+4) If you want a filter for both a file type and the application layer
 protocol that this file type is transported over (i.e. HTML and HTTP),
 you've got a difficult situation.  Each connection can only be 
 classified as one thing at a time.  The obvious thing is to set up
