@@ -1,5 +1,5 @@
 # Finger - User information server - RFC 1288
-# Pattern quality: good notsofast undermatch overmatch
+# Pattern quality: good veryfast undermatch overmatch
 # Usually runs on port 79
 #
 # This pattern is lightly tested.  If it does not
@@ -15,4 +15,4 @@ finger
 # The first matches the client request, which should look like a username.
 # The second matches the usual UNIX reply (but remember that they are
 # allowed to say whatever they want)
-$[a-z][a-z0-9\-_]+|login: [\x09-\x0d -~]* name: [\x09-\x0d -~]* Directory: 
+^[a-z][a-z0-9\-_]+|login: [\x09-\x0d -~]* name: [\x09-\x0d -~]* Directory: 
