@@ -1,7 +1,11 @@
+2005 05 19
+Fixed rar (had the zip pattern by accident).  Fixed what I think was a typo
+in finger '$' --> '^'.  Added trivial script, test_all.sh, to testing.
+
 2005 05 18
 Updated skype (split into skypeout and skypetoskype), counterstrike and
 flash.  gnutella should now match gnutella 2.  Added zip, rar and exe. 
-Fixed typo: rstp --> rtsp.
+Fixed typo: rstp --> rtsp.  Tinkered with gopher.
 
 2005 04 29
 Reorganization.  No functional changes.
